--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,8 +4,9 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 
 header{
       background:black;
-      height:300px;
+      height:100vh;
       width:100%;
+      color: white;
 }
 
 .wrapper{
