--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,6 +2,10 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 .clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+body {
+      font-family: 'Press Start 2P', cursive;
+}
+
 header{
       background:black;
       height:100vh;
@@ -9,20 +13,50 @@ header{
       color: white;
 }
 
+main {
+      background: black;
+      .selectHeader {
+            color: pink;
+            text-align: center;
+            border-top: 15px solid pink;
+            border-bottom: 15px solid pink;
+            line-height: 60px;
+            margin: 0 0 50px 0;
+      }
+}
+
+
 .wrapper{
       width:80%;
       margin:0 auto;
       display:flex;
       flex-flow:row nowrap;
       .leftSide{
-            background:lightblue;
+            // background: black;
             width:60%;
             .asteroidList{
                   list-style: none;
                   li {
-                        padding: 10px 0;
-                        border: 3px solid grey;
-                        margin-bottom: 10px;
+                        // padding: 10px 0;
+                        // border: 3px solid grey;
+                        margin: 0 auto 10px auto;
+                        width: 70%;
+                        line-height: 30px;
+                        color: rgb(68, 142, 222);
+                        
+                  }
+                  li:hover::before {
+                        content: "▶";
+                        border-color: transparent #111;
+                        // border-color: white;
+                        border-style: solid;
+                        border-width: 0.35em 0 0.35em 0.45em;
+                        display: block;
+                        height: 0;
+                        width: 0;
+                        // left: -1em;
+                        // top: 0.9em;
+                        position: relative;
                   }
             }
       }
@@ -30,19 +64,23 @@ header{
             background:grey;
             border:1px solid red;
             width:40%;
+            display: flex;
+            flex-direction: column-reverse;
             .todayAverage {
-            width: 100%;
-            border: 1px solid red;
-            margin: 0 auto;
-            background: yellow;
-            }
-            .rightSideInfo{
-                  display:none;
-            }
-            .active{
-                  display:block;
-                  background: red;
-            }
+                  width: 100%;
+                  border: 1px solid red;
+                  margin: 0 auto;
+                  background: yellow;
+                  }
+                  .rightSideInfo{
+                        display:none;
+                  }
+                  .active{
+                        display:block;
+                        background: black;
+                        color: white;
+                        
+                  }
       }
 }
 
