--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,4 @@
-<<<<<<< HEAD
-article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block}audio,canvas,video{display:inline-block}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}dfn{font-style:italic}mark{background:#ff0;color:#000}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em}pre{white-space:pre-wrap;word-wrap:break-word}q{quotes:\201C \201D \2018 \2019}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{border:0}svg:not(:root){overflow:hidden}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0}button,input{line-height:normal}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],input[disabled]{cursor:default}input[type=checkbox],input[type=radio]{-webkit-box-sizing:border-box;box-sizing:border-box;padding:0}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}body,figure{margin:0}button::-moz-focus-inner,input::-moz-focus-inner,legend{border:0;padding:0}.clearfix:after{visibility:hidden;display:block;font-size:0;content:'';clear:both;height:0}*{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}header{background:black;height:300px;width:100%}.wrapper{width:80%;margin:0 auto;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-flow:row nowrap;flex-flow:row nowrap}.wrapper .leftSide{background:lightblue;width:60%}.wrapper .leftSide .asteroidList{list-style:none}.wrapper .leftSide .asteroidList li{padding:10px 0;border:3px solid grey;margin-bottom:10px}.wrapper .rightSide{background:grey;border:1px solid red;width:40%}.wrapper .rightSide .todayAverage{width:100%;border:1px solid red;margin:0 auto;background:yellow}.wrapper .rightSide .rightSideInfo{display:none}.wrapper .rightSide .active{display:block;background:red}
-/*# sourceMappingURL=style.css.map */
-=======
+@charset "UTF-8";
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
   display: block; }
 
@@ -136,11 +133,24 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
+body {
+  font-family: 'Press Start 2P', cursive; }
+
 header {
   background: black;
   height: 100vh;
   width: 100%;
   color: white; }
+
+main {
+  background: black; }
+  main .selectHeader {
+    color: pink;
+    text-align: center;
+    border-top: 15px solid pink;
+    border-bottom: 15px solid pink;
+    line-height: 60px;
+    margin: 0 0 50px 0; }
 
 .wrapper {
   width: 80%;
@@ -153,18 +163,34 @@ header {
   -ms-flex-flow: row nowrap;
   flex-flow: row nowrap; }
   .wrapper .leftSide {
-    background: lightblue;
     width: 60%; }
     .wrapper .leftSide .asteroidList {
       list-style: none; }
       .wrapper .leftSide .asteroidList li {
-        padding: 10px 0;
-        border: 3px solid grey;
-        margin-bottom: 10px; }
+        margin: 0 auto 10px auto;
+        width: 70%;
+        line-height: 30px;
+        color: #448ede; }
+      .wrapper .leftSide .asteroidList li:hover::before {
+        content: "▶";
+        border-color: transparent #111;
+        border-style: solid;
+        border-width: 0.35em 0 0.35em 0.45em;
+        display: block;
+        height: 0;
+        width: 0;
+        position: relative; }
   .wrapper .rightSide {
     background: grey;
     border: 1px solid red;
-    width: 40%; }
+    width: 40%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse; }
     .wrapper .rightSide .todayAverage {
       width: 100%;
       border: 1px solid red;
@@ -174,5 +200,5 @@ header {
       display: none; }
     .wrapper .rightSide .active {
       display: block;
-      background: red; }
->>>>>>> e4955e00d03f2d1a36aeaf5b85131a092c4f6717
+      background: black;
+      color: white; }
