--- a/styles/style.scss
+++ b/styles/style.scss
@@ -95,18 +95,6 @@ header{
       }
 
 }
-
-main {
-      background: black;
-      .selectHeader {
-            color: pink;
-            text-align: center;
-            border-top: 15px solid pink;
-            border-bottom: 15px solid pink;
-            line-height: 60px;
-            margin: 0 0 50px 0;
-      }
-}
 @keyframes rotateRight {
       0%{
             
@@ -121,21 +109,45 @@ main {
       }
 }
 
-
-.wrapper{
+main {
+      background: black;
+      position:relative;
       width:100%;
-      // position:absolute;
+      height:100%;
+      overflow-x:hidden;
+      // display:flex;
+      // flex-flow:row nowrap;
+      .selectHeader {
+            color: pink;
+            text-align: center;
+            border-top: 15px solid pink;
+            border-bottom: 15px solid pink;
+            font-size:40px;
+            margin: 0 0 50px 0;
+            padding:30px;
+      }
+}
 
+
+
+      .leftWrapper{
+            width:100%;
+            height:100%;
+            position:relative;
+            left:0;
+            right:0;
+            // position:absolute;
+            transition:all 0.5s linear;
+            display:flex;
+            flex-flow:row nowrap;
+            justify-content:space-around;
+      }
       .container{
             // background: black;
             border: 20px solid rgb(92, 34, 71);
             border-radius: 100px;
-            width:50%;
+            width:60%;
             padding: 10px;
-            position:absolute;
-            left:50%;
-            transform:translateX(-50%);
-            transition:all 1s ease-in-out;
 
             .firstInnerLeft {
                   border: 20px solid rgb(167, 47, 50);
@@ -159,6 +171,7 @@ main {
                                     line-height: 50px;
                                     color: rgb(68, 142, 222);
                                     text-align:center;
+                                    display:block;
                                     
                               }
                               // li:hover::before {
@@ -178,38 +191,80 @@ main {
                   }
             }
       }
-      .rightSide{
-            display: flex;
-            flex-direction: column;
+      .rightWrapper{
+            width:100%;
             position:relative;
-            justify-content:space-between;
+            top:-20%;
             left:100%;
-            width:50%;
-            transition:all 1s ease-in-out;
+            right:-100%;
+            // position:absolute;
+            transition:all 0.5s linear;
+            display:flex;
+            flex-flow:row nowrap;
+            justify-content:space-around;
+      }
+      .rightSide{
+            width:60%;
+            border: 20px solid rgb(92, 34, 71);
+            border-radius: 100px;
+            padding:10px;
+
+
+            .firstInnerRight{
+                  border: 20px solid rgb(167, 47, 50);
+                  border-radius: 75px;
+                  padding:10px;
+                  height:100%
+            }
+            .secondInnerRight{
+                  border: 20px solid rgb(204, 83, 41);
+                  border-radius: 50px;
+                  padding:10px;
+                  height:100%;
+                  display:flex;
+                  flex-flow:column nowrap;
+                  justify-content:space-around;
+                  align-items:center;
+
+                  .todayAverage {
+                  width: 100%;
+                  color:white;
+                  // text-align:center;
+                  // margin:0 auto;/
+                  }
+                  .rightSideInfo{
+                        display:none;
+                        color:white;
+                        h2{
+                              text-align:center;
+                        }
+                        img{
+                              position:relative;
+                              left:50%;
+                              transform:translateX(-50%);
+                              margin:100px 0;
+                        }
+                        p{
+                              font-size:25px;
+                        }
+
+                  }
+                  .active{
+                        display:block;
+                        background: black;
+                  }
+                  img.small{
+                        width:100px;
+                  }
+                  img.medium{
+                        width:200px;
+                  }
+                  img.large{
+                        width:250px;
+                  }
+            }
 
             
-            .todayAverage {
-            width: 100%;
-            margin: 0 auto;
-            background: yellow;
-            }
-            .rightSideInfo{
-                  display:none;
-                  color:white;
-            }
-            .active{
-                  display:block;
-                  background: black;
-            }
-            img.small{
-                  width:100px;
-            }
-            img.medium{
-                  width:200px;
-            }
-            img.large{
-                  width:250px;
-            }
       }
-}
+
 
