--- a/styles/style.scss
+++ b/styles/style.scss
@@ -111,33 +111,34 @@ header{
 
 main {
       background: black;
-      position:relative;
       width:100%;
-      height:100%;
+      height:100vh;
       overflow-x:hidden;
+      position:relative;
+      // display:flex;
+      // justify-content:space-around;
       // display:flex;
       // flex-flow:row nowrap;
-      .selectHeader {
-            color: pink;
-            text-align: center;
-            border-top: 15px solid pink;
-            border-bottom: 15px solid pink;
-            font-size:40px;
-            margin: 0 0 50px 0;
-            padding:30px;
-      }
+}
+.selectHeader {
+      color: pink;
+      text-align: center;
+      border-top: 25px solid pink;
+      border-bottom: 25px solid pink;
+      font-size:40px;
+      padding:50px;
+      margin:0;
+      background:black;
 }
 
 
 
       .leftWrapper{
             width:100%;
-            height:100%;
-            position:relative;
-            left:0;
-            right:0;
             // position:absolute;
             transition:all 0.5s linear;
+            position:absolute;
+            top:0;
             display:flex;
             flex-flow:row nowrap;
             justify-content:space-around;
@@ -193,21 +194,18 @@ main {
       }
       .rightWrapper{
             width:100%;
-            position:relative;
-            top:-20%;
-            left:100%;
-            right:-100%;
-            // position:absolute;
+            display:none;
+            position:absolute;
+            top:0;
             transition:all 0.5s linear;
-            display:flex;
-            flex-flow:row nowrap;
-            justify-content:space-around;
+            
       }
       .rightSide{
             width:60%;
             border: 20px solid rgb(92, 34, 71);
             border-radius: 100px;
             padding:10px;
+            margin:0 auto;
 
 
             .firstInnerRight{
@@ -229,20 +227,37 @@ main {
                   .todayAverage {
                   width: 100%;
                   color:white;
-                  // text-align:center;
-                  // margin:0 auto;/
+
+                  text-align:center;
+                  margin:0 auto;
+                  h3{
+                        font-size:30px;
+                        text-decoration:underline;
+                  }
+                  p{
+                        font-size:20px;
+                  }
                   }
                   .rightSideInfo{
                         display:none;
                         color:white;
                         h2{
                               text-align:center;
+                              font-size:40px;
+                              text-decoration:underline;
+                        }
+                        .sidebarImageContainer{
+                              height:500px;
+                              width:500px;
+                              display:flex;
+                              justify-content:center;
+                              align-items:center;
+
                         }
                         img{
-                              position:relative;
-                              left:50%;
-                              transform:translateX(-50%);
-                              margin:100px 0;
+                              // position:relative;
+                              display:block;
+                              animation:rotateRight 40s linear infinite;
                         }
                         p{
                               font-size:25px;
