--- a/styles/style.scss
+++ b/styles/style.scss
@@ -231,18 +231,18 @@ main {
                   align-items:center;
 
                   .todayAverage {
-                  width: 100%;
-                  color:white;
+                        width: 100%;
+                        color:white;
 
-                  text-align:center;
-                  margin:0 auto;
-                  h3{
-                        font-size:30px;
-                        text-decoration:underline;
-                  }
-                  p{
-                        font-size:20px;
-                  }
+                        text-align:center;
+                        margin:0 auto;
+                        h3{
+                              font-size:30px;
+                              text-decoration:underline;
+                        }
+                        p{
+                              font-size:20px;
+                        }
                   }
                   .rightSideInfo{
                         display:none;
@@ -279,6 +279,7 @@ main {
                               animation-name: caution;
                               animation-iteration-count: infinite;
                               animation-duration: 1s;
+                              padding: 30px;
                         }
                         .selectAnother {
                               text-decoration: none;
@@ -313,6 +314,26 @@ main {
 
             
       }
+
+
+@keyframes speed {
+      from {background-color: black;
+            color: white;}
+      to {background-color: white;
+            color: black;}
+}
+.averageSpeed {
+      margin: 0 auto;
+      width: 50%;
+      animation-name: speed;
+      animation-iteration-count: infinite;
+      padding: 20px;
+}
+
+.speedAnimation {
+      animation-name: speed;
+      animation-iteration-count: infinite;
+}
 
 
 footer{
